--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.2",
+        "@vueup/vue-quill": "^1.2.0",
         "vue": "^3.2.36",
         "vue-router": "^4.2.5"
     }
