--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vue-svg-loader": "^0.16.0",
+        "vue-template-compiler": "^2.7.16"
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.2",
