--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.5.2",
         "@vueup/vue-quill": "^1.2.0",
+        "date-fns": "^3.3.1",
         "vue": "^3.2.36",
         "vue-router": "^4.2.5"
     }
