--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "serve": "vite preview"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.16",
@@ -11,7 +12,7 @@
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.3.6",
-        "vite": "^4.0.0",
+        "vite": "^4.5.5",
         "vue-svg-loader": "^0.16.0",
         "vue-template-compiler": "^2.7.16"
     },
